--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -169,6 +169,11 @@ img {
   }
 }
 
+.nav__list{
+  display: flex;
+  justify-content: space-between;
+}
+
 .nav__link{
   color: var(--white-color);
   font-family: var(--second-font);
@@ -198,7 +203,57 @@ img {
 
 
 /*=============== HOME ===============*/
+.home{
+  background: linear-gradient(180deg, var(--first-color) 0%, var(--first-color-alt) 100%);
+}
 
+.home__container{
+  padding-top: 2rem;
+  row-gap: 2rem;
+}
+
+.home__data{
+  text-align: center;
+}
+
+.home__subtitle{
+  font-size: var(--normal-font-size);
+  color: var(--second-color);
+  font-weight: var(--font-medium);
+  margin-bottom: 75rem;
+}
+
+.home__title,
+.home__description{
+  color: var(--white-color);
+}
+
+.home__title{
+  text-align: initial;
+  font-size: var(--biggest-font-size);
+  font-family: var(--second-font);
+  font-weight: var(--font-regular);
+  line-height: 120%;
+  margin: 0 auto 2rem;
+  position: relative;
+  width: max-content;
+}
+
+.home__title img{
+  width: 80px;
+  position: absolute;
+  right: -1rem;
+  bottom: -1.25rem;
+}
+
+.home__description{
+  margin-bottom: 2rem;
+}
+
+.home__img{
+  width: 320px;
+  justify-self: center;
+}
 
 /*=============== BUTTON ===============*/
 
