--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -634,13 +634,43 @@ img {
 }
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  background-color: hsl(12, 8%, 65%);
+}
 
+::-webkit-scrollbar{
+  background-color: hsl(12, 8%, 45%);
+}
+
+::-webkit-scrollbar{
+  background-color: hsl(12, 8%, 35%);
+}
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background: linear-gradient(180deg, var(--first-color) 0%, var(--first-color-alt) 100%);
+  box-shadow: 0 0 8px hsla(12, 32%, 12%, .5);
+  color: var(--white-color);
+  font-size: 1.1rem;
+  display: inline-flex;
+  padding: .6rem;
+  border-radius: 50%;
+  z-index: var(--z-tooltip);
+  transition: bottom .5s, transform .3s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 /* Show Scroll Up */
-
+.show-scroll{
+  bottom: 7rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
