Scroll Sections Active Links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,7 +206,9 @@ img {
 }
 
 /* Active link */
-
+.active-link{
+  color: var(--second-color);
+}
 
 /*=============== HOME ===============*/
 .home{
